clusters/talos/system/hubble/ingress-hubble.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: hubble
  namespace: kube-system
spec:
  rules:
  - host: hubble.t.efgh.nl
    http:
      paths:
      - backend:
          service:
            name: hubble-ui
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - hubble.t.efgh.nl
    secretName: hubble-tls
